--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
     }
     .sidebar img {
         width: 200px;
+        margin-top: 10px;
+        margin-left: 10px;
         border: 5px solid black;
         border-radius: 0 10px 0 10px;
-        width: 250px;
     }
     .content {
         flex: 1;
@@ -92,8 +93,9 @@
                     <section class = 'interests'>
                         <header>Interests</header>
                         <ul>
+                            <li>'The Office'</li>
+                            <li>Laughing</li>
                             <li>Reading</li>
-                            <li>Watching Movies</li>
                             <li>Hiking</li>
                         </ul>
                     </section>
