--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Teamer's Amazing Website</title>
         <style>
     body {
-        background: rgb(237, 237, 237);
-        color: rgb(45, 45, 45);
+        background: #fffcf0;
+        color: floralwhite;
         padding: 10px;
         font-family: arial;
     }
@@ -20,7 +20,7 @@
 
     /* navigation menu */
     nav {
-        background: rgb(245, 224, 184);
+        background: #e39578;
         margin: 0 auto;
         margin-bottom: 20px;
         display: flex;
@@ -30,7 +30,7 @@
     nav header {
         display: flex;
         align-items: center;
-        color: rgb(0,0,0);
+        color: floralwhite;        
         flex: 1;
     }
     nav ul {
@@ -41,13 +41,13 @@
         padding: 0 10px;
     }
     nav a {
-        text-decoration: none;
-        color: #000;
+        text-decoration: underline;
+        color: floralwhite;
     }
 
     /* main container area beneath menu */
     main {
-        background: rgb(245, 224, 184);
+        background: #e39578;
         display: flex;
         border-radius: 0 10px 0 10px;
     }
@@ -89,10 +89,13 @@
                 
                 <div class = 'content'>
                     <header>Teamer Tibebu</header>
-                    <p>Student @ Operation Spark</p>
+                    <p>Student @ Operation Spark,</p>
+                    <p>Software Engineer in Training</p>
                     <section class = 'interests'>
                         <header>Interests</header>
                         <ul>
+                            <li>Personal Development</li>
+                            <li>All Things Nature</li>
                             <li>'The Office'</li>
                             <li>Laughing</li>
                             <li>Reading</li>
