--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     header {
         font-size: 1.5em;
         font-weight: bold;
+        text-shadow: 0px 1px black;
     }
     #all-contents {
         max-width: 800px;
