--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     header {
         font-size: 1.5em;
         font-weight: bold;
-        text-shadow: 0px 0.5px black;
     }
     #all-contents {
         max-width: 800px;
@@ -60,8 +59,9 @@
         width: 200px;
         margin-top: 10px;
         margin-left: 10px;
-        border: 5px solid black;
+        border: 5px solid floralwhite;
         border-radius: 0 10px 0 10px;
+        padding: 3px;
     }
     .content {
         flex: 1;
