--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 
                 <div class = 'content'>
                     <header>Teamer Tibebu</header>
-                    <p>Student @ Operation Spark,</p>
+                    <p>Student @ Operation Spark</p>
                     <section class = 'interests'>
                         <header>Interests</header>
                         <ul>
