--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,7 @@
             <nav>
                 <header>Teamer's Amazing Website</header>
                 <ul>
-                    <li><a href="index.html">Home</a>
-                    </li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
