--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         align-items: center;
         color: floralwhite;        
         flex: 1;
+        margin-left: 10px;
     }
     nav ul {
         list-style-image: none;
@@ -60,7 +61,7 @@
         margin-top: 10px;
         margin-left: 10px;
         border: 5px solid floralwhite;
-        border-radius: 0 10px 0 10px;
+        border-radius: 0 10px 0 10px;;
         padding: 3px;
     }
     .content {
