--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,7 @@
                 align-items: center;
                 color: floralwhite;
                 flex: 1;
+                margin-left: 10px;
             }
             nav ul {
                 list-style-image: none;
