--- a/portfolio.html
+++ b/portfolio.html
@@ -89,8 +89,8 @@
                 <header>Teamer's Amazing Website</header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a>
-                    </li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="studies.html">Studies</a></li>
                 </ul>
             </nav>
             <main>
